--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,7 +10,7 @@
         }
     ],
     "background_color": "#3367D6",
-    "display": "fullscreen",
+    "display": "minimal-ui",
     "scope": "/",
     "theme_color": "#3367D6",
     "description": "Track time for tasks"
